basic security get fix but break the rest

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,9 @@
 logging.level.mvcrest.spring6mvcrest=debug
 spring.h2.console.enabled=true
 
+spring.security.user.name=user1
+spring.security.user.password=password
+
 spring.flyway.enabled=false
+
+logging.level.org.springframework.security=trace
